--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <body background="./Images/calmap20.png">
+  </body>
+
 </head>
 
 <body>
@@ -15,20 +18,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>California Pollution</h1>
+        <h1>CaliPolluts Project</h1>
         <p>Use the interactive charts below to explore the dataset</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>SELECT Sample:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sample MetaData</h3>
-          </div>
+
+        
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
@@ -49,7 +43,7 @@
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src=""></script>
+  <script type="text/javascript" src="D3_graph_working/startercode/assets/js/app.js"></script>
   <script src=""></script>
 
 </body>
