--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <body background="./Images/calmap20.png">
+  <body background="./Images/calmap20.png">           
   </body>
 
 </head>
@@ -38,6 +38,23 @@
     <div class="col-md-12">
       <div id="bubble"></div>
     </div>
+  </div> 
+  
+  <div id="Page1">
+      Traffic Heat Map
+      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(1).html"  target="_blank">Click Me</a>
+    </div>
+  
+    <div id="Page2">
+      Pollution Heat Map
+      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(2).html"  target="_blank">Click Me</a>
+    </div>
+  
+    <div id="Page3">
+      Asthma Heat Map
+      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(3).html"  target="_blank">Click Me</a>
+    </div> 
+
   </div>
 
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
@@ -45,6 +62,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script type="text/javascript" src="D3_graph_working/startercode/assets/js/app.js"></script>
   <script src=""></script>
+      </script>
 
 </body>
 
