--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         <h1>CaliPolluts Project</h1>
         <p>Use the interactive charts below to explore the dataset</p>
         </div>
-
-        
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
+  <div id ="scatter"></div>
       <div class="col-md-5">
         <div id="pie"></div>
       </div>
@@ -42,7 +41,7 @@
   
   <div id="Page1">
       Traffic Heat Map
-      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(1).html"  target="_blank">Click Me</a>
+      <a href="/geoHeatmap (1).htm"  target="_blank">Click Me</a>
     </div>
   
     <div id="Page2">
