--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
   <div id="Page1">
       Traffic Heat Map
-      <a href="/geoHeatmap (1).htm"  target="_blank">Click Me</a>
+      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(1).html"  target="_blank">Click Me</a>
     </div>
   
     <div id="Page2">
@@ -56,13 +56,13 @@
 
   </div>
 
-  <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script type="text/javascript" src="D3_graph_working/startercode/assets/js/app.js"></script>
-  <script src=""></script>
-      </script>
-
-</body>
-
-</html>
+   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+   <script type="text/javascript" src="D3_graph_working/startercode/assets/js/app.js"></script>
+   <script src=""></script>
+ ​
+ </body>
+ ​
+ </html>
