--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <body background="./Images/calmap20.png">           
-  </body>
-
+  <link rel="stylesheet" href="./D3_graph_working/StarterCode/assets/css/style.css">
+  <link rel="stylesheet" href="./D3_graph_working/StarterCode/assets/css/d3Style.css">
 </head>
 
-<body>
+<body background = "./Images/calmap20.png">
 
   <div class="container">
     <div class="row">
