--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     </div> 
 
   </div>
-
+  <div></div>
+  <div></div>
+  <div></div>
+  <div id="Page3">
+    Pollution Graphics Page
+    <a href="/Plotly_Component/templates/index.html"  target="_blank">Click Me</a>
+  </div> 
    <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
