--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
   
   <div id="Page1">
       Traffic Heat Map
-      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(1).html"  target="_blank">Click Me</a>
+      <a href="/geoHeatmap(1).html"  target="_blank">Click Me</a>
     </div>
   
     <div id="Page2">
       Pollution Heat Map
-      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(2).html"  target="_blank">Click Me</a>
+      <a href="/geoHeatmap(2).html"  target="_blank">Click Me</a>
     </div>
   
     <div id="Page3">
       Asthma Heat Map
-      <a href="file:///C:/Users/mo610/Desktop/Project-2---CaliPolluts/geoHeatmap%20(3).html"  target="_blank">Click Me</a>
+      <a href="/geoHeatmap%20(3).html"  target="_blank">Click Me</a>
     </div> 
 
   </div>
